[package]
name = "ftswarm"
version = "0.1.0"
edition = "2021"
description = "A simple swarm protocol communication library"

[dependencies]
ftswarm_proto = { path = "../ftswarm_proto" }
ftswarm_serial = { path = "../ftswarm_serial" }
ftswarm_macros = { path = "../ftswarm_macros" }
rand = "0.9.0-alpha.0"
tokio.workspace = true
log.workspace = true

# deps for examples
[dev-dependencies]
env_logger = "0.11.3"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"