[package]
name = "ftswarm"
version = "0.2.0"
edition = "2021"
description = "A simple swarm protocol communication library"
license = "MIT"
repository = "https://github.com/Bloeckchengrafik/ftswarm-rs"
readme = "../../README.md"
keywords = ["ftswarm", "communication", "iot", "robotics"]
categories = ["network-programming", "science::robotics"]

[dependencies]
ftswarm_proto = { path = "../ftswarm_proto", version = "0.2.0" }
ftswarm_serial = { path = "../ftswarm_serial", version = "0.2.0" }
ftswarm_macros = { path = "../ftswarm_macros", version = "0.2.0" }
rand = "0.9.0-alpha.0"
tokio.workspace = true
log.workspace = true

# deps for examples
[dev-dependencies]
env_logger = "0.11.3"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"


[[example]]
name = "debug_io"
path = "examples/debug_io.rs"