[package]
name = "ftswarm_emulator"
version = "0.2.0"
edition = "2021"
description = "Procedural macros for the ftswarm crate"
license = "MIT"
repository = "https://github.com/Bloeckchengrafik/ftswarm-rs"
readme = "../../README.md"
keywords = ["ftswarm", "communication", "iot", "robotics"]
categories = ["network-programming", "science::robotics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftswarm_serial = { path = "../ftswarm_serial", version = "0.2.0" }
ftswarm_proto = { path = "../ftswarm_proto", version = "0.2.0" }
log.workspace = true


[dev-dependencies]
ftswarm = { path = "../ftswarm", version = "0.2.0" }
tokio.workspace = true
env_logger = "0.11.3"

[[example]]
name = "emulator"
path = "examples/emulator.rs"
