[package]
name = "ftswarm_macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the ftswarm crate"
license = "MIT"
repository = "https://github.com/Bloeckchengrafik/ftswarm-rs"
readme = "../../README.md"
keywords = ["ftswarm", "communication", "iot", "robotics"]
categories = ["network-programming", "science::robotics"]

publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ["full"] }