[package]
name = "ftswarm_proto"
version = "0.1.0"
edition = "2021"
description = "Protocol definitions for the ftswarm serial communication protocol"
license = "MIT"
repository = "https://github.com/Bloeckchengrafik/ftswarm-rs"
readme = "../../README.md"
keywords = ["ftswarm", "communication", "iot", "robotics"]
categories = ["network-programming", "science::robotics"]

publish = true

[dependencies]
strum = "0.26.2"
strum_macros = "0.26.2"

[[example]]
name = "proto_command"
path = "examples/proto_command.rs"

[[example]]
name = "proto_messageparser"
path = "examples/proto_messageparser.rs"
